--- a/app/views/offer_mailer/response_email.html.erb
+++ b/app/views/offer_mailer/response_email.html.erb
@@ -42,7 +42,7 @@
          .date {
             width: 70px;
          }
-         .portalBtn {
+/*         .portalBtn {
             text-decoration: none !important;
             cursor: pointer;
             border: 1px solid transparent;
@@ -51,7 +51,7 @@
             color: #fff;
             background-color: #7EB5B6;
             font-size: 34px;
-         }
+         }*/
          /*IPAD STYLES*/
          @media only screen and (max-width: 640px) {
          a[href^="tel"], a[href^="sms"] {
@@ -92,9 +92,13 @@
          table[class=icontext] {width: 186px!important;text-align:center!important;}
          table[class="emhide"]{display: none!important;}
          
-         .portalBtn{
+/*         .portalBtn{
             width: 248px;
             height: 64px;
+            font-size: 23px;
+         }*/
+
+         .portalBtn2{
             font-size: 23px;
          }
          #invoiceTable{
@@ -105,6 +109,11 @@
    </head>
 
    <body>
+<!--[if mso]>
+<style type="text/css">
+body, table, td {font-family: Arial, Helvetica, sans-serif !important;}
+</style>
+<![endif]-->
 <!-- Start of header -->
 <table width="100%" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" background="http://www.fatface.com/content/ebiz/fatface/resources/images/ff-header-bg.jpg">
    <tbody>
@@ -364,14 +373,24 @@
                                           </tr>                                          
                                           <!-- button -->
                                           <tr style="text-align: center;">
-                                             <td height="35">
-                                                <a href="<%= link %>" class="portalBtn" style="font-family: 'Maven Pro', Arial, sans-serif !important;" >Enter Supplier Portal</a>
+                                             <td>
+                                                <!-- old button -->
+                                                <!-- <a href="<%= link %>" class="portalBtn" style="font-family: 'Maven Pro', Arial, sans-serif !important;" >Enter Supplier Portal</a> -->
+                                                <table bgcolor="#7EB5B6" style="border-radius: 8px;" cellpadding="23" cellspacing="0" border="0" align="center">
+                                                   <tbody>
+                                                      <tr style="text-align: center; font-size: 34px; color: white;">
+                                                         <td>
+                                                            <a href="<%= @pins.first.string %>"  class="portalBtn2" style="font-family: 'Maven Pro', Arial, sans-serif !important; color: white; cursor: pointer; text-decoration: none !important;">Enter Supplier Portal</a>
+                                                         </td>
+                                                      </tr>
+                                                   </tbody>
+                                                </table>
                                              </td>
                                           </tr>
                                           <!-- End of button -->
                                           <!-- Spacing -->
                                           <tr>
-                                             <td width="100%" height="55"></td>
+                                             <td width="100%" height="41"></td>
                                           </tr>
                                           <!-- Spacing -->
                                        </tbody>
