--- a/app/views/offer_mailer/response_email.html.erb
+++ b/app/views/offer_mailer/response_email.html.erb
@@ -380,7 +380,7 @@ body, table, td {font-family: Arial, Helvetica, sans-serif !important;}
                                                    <tbody>
                                                       <tr style="text-align: center; font-size: 34px; color: white;">
                                                          <td>
-                                                            <a href="<%= @pins.first.string %>"  class="portalBtn2" style="font-family: 'Maven Pro', Arial, sans-serif !important; color: white; cursor: pointer; text-decoration: none !important;">Enter Supplier Portal</a>
+                                                            <a href="<%= link %>"  class="portalBtn2" style="font-family: 'Maven Pro', Arial, sans-serif !important; color: white; cursor: pointer; text-decoration: none !important;">Enter Supplier Portal</a>
                                                          </td>
                                                       </tr>
                                                    </tbody>
