width of action column

--- a/app/assets/stylesheets/pins.scss
+++ b/app/assets/stylesheets/pins.scss
@@ -103,7 +103,10 @@
   	width: 100px;
   	font-weight: bold;
   }
-   .buttons{
+  .actions{
+  	width: 150px;
+  }
+  .buttons{
   	width: 150px;
   }
 }
