--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -40,7 +40,7 @@
             <th class='darkhead'><%= sortable "offer_amount", "New Offer Amount" %></th>
             <!-- <th><%#= sortable "saving", "Requested Discount" %></th> -->
             <th class='darkhead'><%= sortable "offer_expirey_date", "Offer Expiry Date" %></th>
-            <th class='darkhead'>Available Actions</th>
+            <th class='darkhead actions'>Available Actions</th>
           </tr>
         </thead>
         <tbody>
