width of action column2

--- a/app/assets/stylesheets/pins.scss
+++ b/app/assets/stylesheets/pins.scss
@@ -104,7 +104,8 @@
   	font-weight: bold;
   }
   .actions{
-  	width: 150px;
+  	//width: 150px;
+  	width: 200px;
   }
   .buttons{
   	width: 150px;
