--- a/app/assets/stylesheets/pins.scss
+++ b/app/assets/stylesheets/pins.scss
@@ -103,9 +103,11 @@
   	width: 100px;
   	font-weight: bold;
   }
-  .actions{
+  .btn-group{
   	//width: 150px;
-  	width: 200px;
+  	//width: 140px;
+  	//width: 190px;
+  	width: 100%;
   }
   .buttons{
   	width: 150px;
