--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -216,8 +216,8 @@
     list2.appendChild(x);
     //document.querySelector('.selectedContent .earlyPaymentAmountAccepted').innerHTML = li;
     //document.querySelector('.selectedContent .earlyPaymentInvoiceNumber').innerHTML = acceptedPins.filter(Number).length;  
-    document.querySelector('.earlyPaymentAmountAccepted').innerHTML = li;
-    document.querySelector('.earlyPaymentInvoiceNumber').innerHTML = acceptedPins.filter(Number).length;          
+    //document.querySelector('.earlyPaymentAmountAccepted').innerHTML = li;
+    //document.querySelector('.earlyPaymentInvoiceNumber').innerHTML = acceptedPins.filter(Number).length;          
   } 
 
   function format1(n, currency) {
