Modal text testing3

--- a/app/assets/stylesheets/pins.scss
+++ b/app/assets/stylesheets/pins.scss
@@ -111,6 +111,15 @@
   }
 }
 
+
+.showDisplay {
+  display: table;
+}
+.hideDisplay {
+  display: none;
+  visibility: hidden;
+}
+
 	// table-striped>tbody>tr:nth-child(odd)>td.dark, .table-striped>tbody>tr:nth-child(odd)>th.dark{
 	// 	background-color: #7EB5B6;
 	// 	color: white;
